infra/k8s/stage/minio-depl.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio-deployment
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: minio
    spec:
      # Refer to the PVC created earlier
      volumes:
      - name: storage
        persistentVolumeClaim:
          # Name of the PVC created earlier
          claimName: minio-pv-claim
      containers:
      - name: minio
        # Pulls the default Minio image from Docker Hub
        image: minio/minio:latest
        args:
        - server
        - /storage
        - --console-address
        - :9001
        ports:
        - containerPort: 9000
          hostPort: 9000
        - containerPort: 9001
          hostPort: 9001
        # Mount the volume into the pod
        volumeMounts:
        - name: storage # must match the volume name, above
          mountPath: "/d/data"
        resources:
            requests:
              cpu: '1000m'
              memory: '1000Mi'
            limits:
              cpu: 2000m
              memory: 2000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  ports:
    - name: minio-server
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: minio-dashboard
      port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: minio
