infra/k8s/stage/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: 246812043791.dkr.ecr.ap-south-1.amazonaws.com/server:latest
          resources:
            requests:
              cpu: '100m'
              memory: '100Mi'
            limits:
              cpu: 1000m
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  selector:
    app: server
  ports:
    - name: server
      protocol: TCP
      port: 3000
      targetPort: 3000
