infra/k8s/stage/server-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-mongo
  template:
    metadata:
      labels:
        app: server-mongo
    spec:
      containers:
      - name: server-mongo
        image: mongo:6.0.3
        resources:
          requests:
            cpu: '100m'
            memory: '100Mi'
          limits:
            cpu: 1000m
            memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: server-mongo-srv
spec:
  selector:
    app: server-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
