infra/k8s/stage/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    cert-manager.io/cluster-issuer: "letsencrypt-stage-api"
spec:
  tls:
    - hosts:
      - staging.staging.api.playalvis.com
      secretName: letsencrypt-stage-api
  rules:
    - host: staging.api.playalvis.com
      http:
        paths:
          - path: /v1/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-srv
                port:
                  number: 3000
