infra/k8s/stage/ingress-user.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-user-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-stage-user"
spec:
  tls:
    - hosts:
      - staging.playalvis.com
      secretName: letsencrypt-stage-user
  rules:
    - host: staging.playalvis.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-user-srv
                port:
                  number: 3000
